; DO NOT ... DO NOT ... DO NOT ... update the README.md file automatically
; as part of the build. We do not want upgrades to `cmdliner` to break
; anybody's build!

; Use the following to update the docs ...
;   Windows: with-dkml dune build `@runmarkdown --auto-promote
;   Unix: dune build @runmarkdown --auto-promote

; This is so that MDX can run `diskuvbox` directly.

(rule
 (target diskuvbox.exe)
 (action
  (copy src/bin/main.exe %{target})))

; BEGIN HACK - Workaround unsupported ```console blocks

(rule
 (alias runmarkdown)
 (deps
  (:in README.md)
  diskuvbox.exe
  src/lib/dune.runlicense.inc)
 (action
  (progn
   (run ./mdx-console.sh %{in})
   (no-infer
    (diff README.md README.md.corrected)))))

; END HACK

; Use the following to update the docs ...
;   Windows: with-dkml CORRECT_MARKDOWN=true dune runtest --auto-promote
;   Unix: env CORRECT_MARKDOWN=true dune runtest --auto-promote

; BEGIN EXPECTED
; (mdx
;  (deps diskuvbox.exe src/lib/dune.runlicense.inc) ; only available in Dune 3.0+
;  (enabled_if %{env:CORRECT_MARKDOWN=false})
;  (files README.md))
; END EXPECTED
