
(rule
(target setup-dkml.gen.gitlab-ci.yml)
(alias gen-dkml)
(action
  (setenv
  OCAMLRUNPARAM
  b
  (run
    gl-setup-dkml-yml
    ; Exclude macOS until you have a https://gitlab.com/gitlab-com/runner-saas-macos-access-requests/-/issues approved
    --exclude-macos
    --output-file
    %{target}))))

(rule
(alias gen-dkml)
(action
  (diff setup-dkml.gitlab-ci.yml setup-dkml.gen.gitlab-ci.yml)))
