
; windows_x86

(rule
(target setup-dkml-windows_x86-gen.ps1)
(action
  (setenv
  OCAMLRUNPARAM
  b
  (run pc-setup-dkml --output-windows_x86 %{target}))))

(rule
(alias gen-dkml)
(action
  (diff setup-dkml-windows_x86.ps1 setup-dkml-windows_x86-gen.ps1)))

; windows_x86_64

(rule
(target setup-dkml-windows_x86_64-gen.ps1)
(action
  (setenv
  OCAMLRUNPARAM
  b
  (run pc-setup-dkml --output-windows_x86_64 %{target}))))

(rule
(alias gen-dkml)
(action
  (diff setup-dkml-windows_x86_64.ps1 setup-dkml-windows_x86_64-gen.ps1)))

; darwin_x86_64

(rule
 (target setup-dkml-darwin_x86_64-gen.sh)
 (action
  (setenv
   OCAMLRUNPARAM
   b
   (run pc-setup-dkml --output-darwin_x86_64 %{target}))))

(rule
 (alias gen-dkml)
 (action
  (diff setup-dkml-darwin_x86_64.sh setup-dkml-darwin_x86_64-gen.sh)))
  